[tool.poetry]
name = "evopayment"
version = "0.0.1"
description = "Payment system"
authors = ["Kostya Ten <kostya@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
aioredis = "^2.0.1"
orjson = "^3.6.6"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.0"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.18.1"}
httpx = {extras = ["http2", "brotli"], version = "^0.22.0"}
email-validator = "^1.1.3"
aerich = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.0"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
flake8 = "^4.0.1"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.1.11"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.0.0"
flake8-functions = "^0.0.6"
flake8-print = "^4.0.0"
flake8-quotes = "^3.3.1"
flake8-string-format = "^0.3.0"
flake8-typing-imports = "^1.12.0"
flake8-variables-names = "^0.0.4"
flake8 = "^4.0.1"
devtools = "^0.8.0"
mypy = "^0.931"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
